--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,19 @@
             "type": "pwa-node",
             "request": "launch",
             "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
+            "runtimeArgs": [
+                "--loader",
+                "ts-node/esm"
             ],
-            "program": "${workspaceFolder}\\src\\index.js"
+            "args": [
+                "${workspaceRoot}/src/index.ts"
+            ],
+            "skipFiles": ["<node_internals>/**"],
+            "sourceMaps": true,
+            "resolveSourceMapLocations": [
+                "${workspaceFolder}/**",
+                "!**/node_modules/**"
+            ]
         }
     ]
 }
